# flow-browser

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
examples/: extend_scene.py  first_run_signin.py  generate_text_to_video.py  image_to_video.py  manage_projects.py
scripts/: dump_model_picker.py  dump_model_picker_level2.py  dump_video_popover.py  export_share.ps1  inspect_flow.py  probe_create_project.py  probe_create_project_v2.py  probe_delete_project.py  probe_empty_project.py  probe_ingredient_upload.py  probe_ingredient_v2.py  probe_media_upload.py  probe_signed_in.py  probe_tile_actions.py  test_combined_features.py  test_create_delete_project.py  test_extend_scene.py  test_generate_ad.py  test_veo_long.py  test_veo_short.py
src/flow_browser/: __init__.py  browser.py  client.py  constants.py  exceptions.py  locators.py  types.py
src/flow_browser/pages/: __init__.py  edits.py  generation.py  home.py  ingredients.py  project.py
src/flow_browser/utils/: __init__.py  downloads.py  logging.py  waits.py
tests/e2e/: test_locators_present.py
tests/unit/: test_import_surface.py
