[project]
name = "flow-browser"
version = "0.1.0"
description = "Unofficial async Python client for Google Flow (labs.google/fx/tools/flow), driven by a real Chrome via Playwright"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Munder" }]
dependencies = [
    "playwright>=1.45",
    "pydantic>=2.5",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flow_browser"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "e2e: drives a real browser and Google Flow (costs credits)",
    "slow: long-running",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
